Cabal-Version:       2.2

Name:                test-on-kernel
Version:             0.1.0.0
Synopsis:            Run a specific test on a specific Linux kernel build using Qemu
Homepage:            https://github.com/NicolasT/test-on-kernel
License:             GPL-3.0-only
License-File:        LICENSE
Author:              Nicolas Trangez
Maintainer:          ikke@nicolast.be
Category:            Testing
Extra-Source-Files:  CHANGELOG.md, README.md

Executable test-on-kernel
  Main-Is:             Main.hs
  Build-Depends:       base ^>=4.14.2.0
  Default-Language:    Haskell2010
